@@ -94,9 +94,8 @@ ccm_extension_loader_new ()
 					
 					if ((plugin = ccm_extension_new(file)) != NULL)
 					{
-						self->priv->plugins = g_slist_insert_sorted (
-										self->priv->plugins, plugin,
-										(GCompareFunc)_ccm_extension_compare);
+						_ccm_extension_insert_sorted (&self->priv->plugins,
+													  plugin);
 					}
 					g_free(file);
 				}
