@@ -1,3 +1,9 @@
+2008-01-25  Carlos Diógenes  <cerdiogenes@gmail.com>
+
+    * src/ccm-extension-loader.c:
+    * src/ccm-extension.c:
+    * src/ccm-extension.h: Fix plugin sorting order
+
 2008-01-23  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c:
